syntax = "proto3";

package subpub;

option go_package = "./;subpubv1";

import "google/protobuf/empty.proto";

service SubPub {
    rpc Subscribe(SubscribeRequest) returns (stream Event);
    rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}

message SubscribeRequest {
    string key = 1;
}

message PublishRequest {
    string key = 1;
    string data = 2;
}

message Event {
    string data = 1;
}